examples/java/JavaApplication1/build/classes/err.txt
javaapplication1/JavaApplication1.java:19: error: ';' expected
        System.out.println("Hello world")
                                         ^
1 error
